[project]
name = "dmm7510-high-temp-resistance"
version = "0.1.0"
description = "Python control and automation scripts for Keithley DMM7510 high-temperature resistance measurements."
requires-python = ">=3.11"

dependencies = [
    "python-dotenv",
    "pyvisa",
    "matplotlib",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyvisa-sim",
]

[project.scripts]
measure-once = "cli.measure_once:app"
resistance-loop = "cli.resistance_loop:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dmm7510*","cli*"]
